Bug 320358 Firefox crashes in nsXULButtonAccessible::GetState r=aaronleventhal sr=roc